--- a/230317/actualnumber/actualnumber/actualnumber.vcxproj
+++ b/230317/actualnumber/actualnumber/actualnumber.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b72bd7dc-a076-4325-a7d4-16f64500fe83}</ProjectGuid>
-    <RootNamespace>My230717age</RootNamespace>
+    <ProjectGuid>{03e2dbdf-77e3-4a17-8de4-3b1bd51b75b1}</ProjectGuid>
+    <RootNamespace>actualnumber</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>230317_actualnumber</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="age.c" />
+    <ClCompile Include="actualnumber.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
