--- a/230317/actualnumber/actualnumber/actualnumber.vcxproj.filters
+++ b/230317/actualnumber/actualnumber/actualnumber.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="age.c">
+    <ClCompile Include="actualnumber.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
