--- a/230324/230324_function2/230324_function2/230324_function2.vcxproj
+++ b/230324/230324_function2/230324_function2/230324_function2.vcxproj
@@ -18,11 +18,14 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="function2.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{6c0ac175-2906-4e4d-a97a-c24f4ac74707}</ProjectGuid>
-    <RootNamespace>My230323function</RootNamespace>
+    <ProjectGuid>{52c47762-406f-4bc2-a869-82d03dd3ade1}</ProjectGuid>
+    <RootNamespace>My230324function2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,9 +141,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="function.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
