--- a/230324/230324_function2/230324_function2/230324_function2.vcxproj.filters
+++ b/230324/230324_function2/230324_function2/230324_function2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="function.c">
+    <ClCompile Include="function2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
