--- a/230328/230328_character/230328_character/230328_character.vcxproj
+++ b/230328/230328_character/230328_character/230328_character.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="array_project.c" />
     <ClCompile Include="character.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
