--- a/230328/230328_character/230328_character/230328_character.vcxproj.filters
+++ b/230328/230328_character/230328_character/230328_character.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="character.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="array_project.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
